fix: about section mobile version; code refactoring

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -74,5 +74,5 @@ li {
 }
 
 .section {
-  height: calc(100dvh - 66px);
+  min-height: calc(100vh - 66px);
 }
